--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile files('libs/ion-2.1.6.jar')
     compile files('libs/glide-3.6.1.jar')
     compile files('libs/universal-image-loader-1.9.4.jar')
+    compile files('libs/jsoup-1.8.3.jar')
 }
