--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:label="@string/app_name" >
 
             <intent-filter>
@@ -21,8 +21,8 @@
 
         </activity>
 
-        <activity android:name=".SecondActivity"></activity>
-        <activity android:name=".ItemActivity"></activity>
+        <activity android:name=".Activity.SecondActivity"></activity>
+        <activity android:name=".Activity.ItemActivity"></activity>
     </application>
 
 </manifest>
